--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Robert Harangus' Personal Website"
+      content="Centrul de psihoterapie Animo"
     />
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>Robert Harangus</title>
+    <title>Centrul Animo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
